# gem-back

./: .eslintrc.json  .gitignore  .npmignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FULLY_GENAI_SUPPORT.md  GEMINI.md  IMPROVEMENT_PLAN.md  LICENSE  MONITORING.md  PLAN.md  PUBLISH.md  README.ko.md  README.md  REDDIT.md  RELEASE_NOTE.ko.md  RELEASE_NOTE.md  TESTING.md  client.go  client.py  client_test.go  gem-back.smithy  package-lock.json  package.json  test_client.py  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: test-pr.yml  test.yml  update-projects-showcase.yml
examples/: README.md  advanced-config.ts  basic-usage.ts  custom-fallback.ts  error-handling.ts  function-calling.ts  json-mode.ts  monitoring-example.ts  multi-key-example.ts  multimodal.ts  safety-settings.ts  streaming.ts  system-instructions.ts
python/: .gitignore  README.md  pyproject.toml
python/gemback/: __init__.py  client.py  rotators.py  types.py
python/gemback/monitoring/: health.py  rate_limit.py
python/tests/: test_client.py
scripts/: .models-cache.json  fetch-models.ts  generate-models.ts  github-api.ts  models-data.json  project-finder.ts  readme-updater.ts  types.ts  update-showcase.ts
src/: index.ts
src/client/: FallbackClient.ts  GeminiClient.ts
src/config/: defaults.ts  models.ts
src/monitoring/: health-monitor.ts  index.ts  rate-limit-tracker.ts
src/types/: config.ts  errors.ts  models.ts  response.ts
src/utils/: logger.ts  (+3 more)
test-integration/: QUICK_START.md  README.md  TEST_SCENARIOS.md  run-all-tests.sh
(+37 files in other folders)
