[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemback"
version = "0.1.0"
description = "Smart Gemini API Fallback Library with Multi-Key Rotation & Monitoring"
readme = "README.md"
authors = [{ name = "Laeyoung", email = "laeyoung@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "google-genai>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["gemback"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
